--- a/finalGame/index.html
+++ b/finalGame/index.html
@@ -4,11 +4,11 @@
 	<meta charset="UTF-8" />
 	<title>hi grader</title>
 	<script type="text/javascript" src="../framework/phaser.min.js"></script>
-	<script type="text/javascript" src="js/MainMenu.js"></script>
-	<script type="text/javascript" src="js/Play.js"></script>
-	<script type="text/javascript" src="js/GameOver.js"></script>
-	<script type="text/javascript" src="js/Planet.js"></script>
-	<script type="text/javascript" src="js/Trail.js"></script>
+	<script type="text/javascript" src="js/states/MainMenu.js"></script>
+	<script type="text/javascript" src="js/states/Play.js"></script>
+	<script type="text/javascript" src="js/states/GameOver.js"></script>
+	<script type="text/javascript" src="js/prefabs/Planet.js"></script>
+	<script type="text/javascript" src="js/prefabs/Trail.js"></script>
 	
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
