--- a/finalGame/index.html
+++ b/finalGame/index.html
@@ -8,6 +8,7 @@
 	<script type="text/javascript" src="js/Play.js"></script>
 	<script type="text/javascript" src="js/GameOver.js"></script>
 	<script type="text/javascript" src="js/Planet.js"></script>
+	<script type="text/javascript" src="js/Instructions.js"></script>
 	
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
