--- a/finalGame/index.html
+++ b/finalGame/index.html
@@ -9,6 +9,7 @@
 	<script type="text/javascript" src="js/states/Instructions.js"></script>
 	<script type="text/javascript" src="js/states/Play.js"></script>
 	<script type="text/javascript" src="js/states/GameOver.js"></script>
+	<script type="text/javascript" src="js/prefabs/CameraCenter.js"></script>
 	<script type="text/javascript" src="js/prefabs/Planet.js"></script>
 	<script type="text/javascript" src="js/prefabs/Trail.js"></script>
 	
