--- a/finalGame/index.html
+++ b/finalGame/index.html
@@ -10,7 +10,7 @@
 	<script type="text/javascript" src="js/states/Play.js"></script>
 	<script type="text/javascript" src="js/states/GameOver.js"></script>
 	<script type="text/javascript" src="js/prefabs/CameraCenter.js"></script>
-	<script type="text/javascript" src="js/prefabs/Planet.js"></script>
+	<script type="text/javascript" src="js/prefabs/GBody.js"></script>
 	<script type="text/javascript" src="js/prefabs/Trail.js"></script>
 	
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
