--- a/finalGame/index.html
+++ b/finalGame/index.html
@@ -6,7 +6,8 @@
 	
 	<script type="text/javascript" src="../framework/phaser.min.js"></script>
 	<script type="text/javascript" src="js/states/MainMenu.js"></script>
-	<script type="text/javascript" src="js/states/Instructions.js"></script>
+	<script type="text/javascript" src="js/states/Tutorial.js"></script>
+	<script type="text/javascript" src="js/states/PreGame.js"></script>
 	<script type="text/javascript" src="js/states/Play.js"></script>
 	<script type="text/javascript" src="js/states/GameOver.js"></script>
 	<script type="text/javascript" src="js/prefabs/CameraCenter.js"></script>
