--- a/finalGame/index.html
+++ b/finalGame/index.html
@@ -13,6 +13,7 @@
 	<script type="text/javascript" src="js/prefabs/CameraCenter.js"></script>
 	<script type="text/javascript" src="js/prefabs/GBody.js"></script>
 	<script type="text/javascript" src="js/prefabs/Trail.js"></script>
+	<script type="text/javascript" src="js/prefabs/ScrollingMenu.js"></script>
 	
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
